[gd_scene load_steps=32 format=2]

[ext_resource path="res://src/scenes/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/assets/thoughts.png" type="Texture" id=2]
[ext_resource path="res://src/assets/fonts/Patrick_Hand/PatrickHand-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/sprites/bin-vidros.png" type="Texture" id=4]
[ext_resource path="res://src/sprites/bin-metais.png" type="Texture" id=5]
[ext_resource path="res://src/sprites/bin-plasticos.png" type="Texture" id=6]
[ext_resource path="res://src/sprites/bin-papeis.png" type="Texture" id=7]
[ext_resource path="res://src/scripts/information_bin.gd" type="Script" id=8]
[ext_resource path="res://src/assets/arrow_right.png" type="Texture" id=9]
[ext_resource path="res://src/assets/png/autumn/run/1_autumn_Run_000.png" type="Texture" id=10]
[ext_resource path="res://src/assets/png/autumn/run/1_autumn_Run_001.png" type="Texture" id=11]
[ext_resource path="res://src/assets/png/autumn/run/1_autumn_Run_006.png" type="Texture" id=12]
[ext_resource path="res://src/assets/png/autumn/run/1_autumn_Run_007.png" type="Texture" id=13]
[ext_resource path="res://src/assets/png/autumn/run/1_autumn_Run_003.png" type="Texture" id=14]
[ext_resource path="res://src/assets/png/autumn/run/1_autumn_Run_002.png" type="Texture" id=15]
[ext_resource path="res://src/assets/png/autumn/run/1_autumn_Run_004.png" type="Texture" id=16]
[ext_resource path="res://src/assets/png/autumn/run/1_autumn_Run_009.png" type="Texture" id=17]
[ext_resource path="res://src/assets/png/autumn/run/1_autumn_Run_008.png" type="Texture" id=18]
[ext_resource path="res://src/assets/png/autumn/run/1_autumn_Run_005.png" type="Texture" id=19]
[ext_resource path="res://src/assets/Tiles/Tile-08.png" type="Texture" id=20]
[ext_resource path="res://src/assets/Tiles/Tile-09.png" type="Texture" id=21]
[ext_resource path="res://src/assets/Tiles/Tile-10.png" type="Texture" id=22]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 24, 0, 24, 24, 0, 24 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 24, 0, 24, 24, 0, 24 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 24, 0, 24, 24, 0, 24 )

[sub_resource type="TileSet" id=7]
0/name = "left"
0/texture = ExtResource( 20 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 24, 24 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "right"
1/texture = ExtResource( 21 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 24, 24 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 6 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "middle"
2/texture = ExtResource( 22 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 24, 24 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 4 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 859, 437 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
resource_name = "entered"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 859, 437 ), Vector2( 677, 437 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="InformationBin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 384, 225 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="Sprite"]
unique_name_in_owner = true
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -339.0
margin_top = -253.0
margin_right = -74.0
margin_bottom = -81.0
custom_fonts/font = SubResource( 1 )
text = "Olá! Vou te ansinar a coletar os residuos corretamente, para que eles possam ser reciclados. Toque em uma lixeira e aprenda o que deve ser descartado nela."
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -384.0
margin_top = -160.0
margin_right = 384.0
margin_bottom = -90.0
custom_constants/separation = 24
alignment = 1

[node name="Vidro" type="Button" parent="HBoxContainer" groups=["bin"]]
margin_left = 218.0
margin_right = 283.0
margin_bottom = 70.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true

[node name="LabelVidro" type="Label" parent="HBoxContainer/Vidro"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.0
margin_top = -18.0
margin_right = 22.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 1 )
text = "VIDROS"
align = 1
valign = 1

[node name="Metal" type="Button" parent="HBoxContainer" groups=["bin"]]
margin_left = 307.0
margin_right = 372.0
margin_bottom = 70.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="LabelMetal" type="Label" parent="HBoxContainer/Metal"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.0
margin_top = -18.0
margin_right = 22.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 1 )
text = "METAIS"
align = 1
valign = 1

[node name="Plastico" type="Button" parent="HBoxContainer" groups=["bin"]]
margin_left = 396.0
margin_right = 461.0
margin_bottom = 70.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="LabelPlastico" type="Label" parent="HBoxContainer/Plastico"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.5
margin_top = -18.0
margin_right = 32.5
margin_bottom = 4.0
custom_fonts/font = SubResource( 1 )
text = "PLÁSTICOS"
align = 1
valign = 1

[node name="Papel" type="Button" parent="HBoxContainer" groups=["bin"]]
margin_left = 485.0
margin_right = 550.0
margin_bottom = 70.0
focus_mode = 0
mouse_default_cursor_shape = 2
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true

[node name="LabelPapel" type="Label" parent="HBoxContainer/Papel"]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -22.0
margin_top = -18.0
margin_right = 22.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 1 )
text = "PAPÉIS"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
modulate = Color( 0.160784, 0.670588, 0.886275, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -94.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = 52.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Avançar"
icon = ExtResource( 9 )
icon_align = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 859, 437 )
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 3 )
frame = 6

[node name="Map" type="Node2D" parent="."]

[node name="Terrain" type="TileMap" parent="Map"]
tile_set = SubResource( 7 )
cell_size = Vector2( 24, 24 )
format = 1
tile_data = PoolIntArray( 1507328, 0, 0, 1507329, 2, 0, 1507330, 2, 0, 1507331, 2, 0, 1507332, 2, 0, 1507333, 2, 0, 1507334, 2, 0, 1507335, 2, 0, 1507336, 2, 0, 1507337, 2, 0, 1507338, 2, 0, 1507339, 2, 0, 1507340, 2, 0, 1507341, 2, 0, 1507342, 2, 0, 1507343, 2, 0, 1507344, 2, 0, 1507345, 2, 0, 1507346, 2, 0, 1507347, 2, 0, 1507348, 2, 0, 1507349, 2, 0, 1507350, 2, 0, 1507351, 2, 0, 1507352, 2, 0, 1507353, 2, 0, 1507354, 2, 0, 1507355, 2, 0, 1507356, 2, 0, 1507357, 2, 0, 1507358, 2, 0, 1507359, 1, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "entered"
anims/RESET = SubResource( 8 )
anims/entered = SubResource( 9 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
